<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d1f1eb"
    tools:context=".MedicalMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:id="@+id/linearLayoutMedicalMain">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="নোটিশ বোর্ড"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:autoSizeMaxTextSize="24sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:background="#006B3C"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="#f0f8ff"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:textSize="18sp"
            android:autoSizeMaxTextSize="20sp"
            android:text="@string/exam_notice"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:scrollbars="vertical"/>

        <Button
            android:id="@+id/button_exam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/button_exam"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="#006B3C"
            android:layout_gravity="center"
            android:autoSizeMaxTextSize="20sp"/>

        <Button
            android:id="@+id/button_archive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="#006B3C"
            android:text="@string/button_archive"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:autoSizeMaxTextSize="20sp"/>


        <Button
            android:id="@+id/button_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/subject_prep"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="#006B3C"
            android:layout_gravity="center"
            android:autoSizeMaxTextSize="20sp"/>

        <Button
            android:id="@+id/button_medicalQstn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/last_medi_qstn"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="#006B3C"
            android:layout_gravity="center"
            android:autoSizeMaxTextSize="20sp"/>

        <Button
            android:id="@+id/button_dentalQstn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dental_qstn"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="#006B3C"
            android:layout_gravity="center"
            android:autoSizeMaxTextSize="20sp"
           />

        <Button
            android:id="@+id/button_lecture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/next_exam"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="#006B3C"
            android:layout_gravity="center"
            android:autoSizeMaxTextSize="20sp"
           />

    </LinearLayout>
</ScrollView>